--- a/src/components/PlayerSchedule/PlayerSchedule.css
+++ b/src/components/PlayerSchedule/PlayerSchedule.css
@@ -7,10 +7,10 @@
     line-height: 40px;
 }
 
-.player-schedule_dark-theme {
-    background: #3e423f;
-}
+/*.player-schedule_dark-theme {*/
+/*    background: #3e423f;*/
+/*}*/
 
-.player-schedule_light-theme {
-    background: #3e423f;
-}
+/*.player-schedule_light-theme {*/
+/*    background: #3e423f;*/
+/*}*/
