--- a/src/components/News/News.css
+++ b/src/components/News/News.css
@@ -14,11 +14,13 @@
     background: #8c8d8c;
 
     max-width: 100%;
-    height: 400px;
+    height: 440px;
 
-    padding-top: 10px;
-    padding-left: 25px;
+    padding-top: 5px;
+    padding-left: 15px;
     padding-right: 10px;
     line-height: 25px;
     text-align: left;
+
+    overflow: auto;
 }
