--- a/src/components/GreetLine/GreetLine.css
+++ b/src/components/GreetLine/GreetLine.css
@@ -4,7 +4,7 @@
     justify-content: center;
     justify-items: center;
 
-    background: #3e423f ;
+    /*background: #3e423f ;*/
     font-size: 20px;
     color: chartreuse;
 
@@ -14,4 +14,9 @@
     margin-bottom: 10px;
     margin-left: auto;
     margin-right: auto;
+
+    background-color: #2AA5A0;
+    background-image: linear-gradient(90deg, #db0f8d, #7FFF00FF);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
