--- a/src/components/UpInfoLine/UpInfoLine.css
+++ b/src/components/UpInfoLine/UpInfoLine.css
@@ -34,6 +34,11 @@
     margin-top: 20px;
     color: red;
     font-size: 20px;
+
+    background-color: #2AA5A0;
+    background-image: linear-gradient(90deg, #810fec, #e8b0d3);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .person-info__rank_veteran {
